# yoloradio

./: .gitignore  LICENSE  Makefile  README.md  dev.bat  main.py  pyproject.toml  setup_dev.py  test_command.py  test_device.py  test_training.py  test_workflow.py
.gradio/flagged/: dataset1.csv
temp/: screw_long_obb_yolo_config.yaml
tests/: conftest.py  test_main.py  test_utils.py
yoloradio/: __init__.py  __version__.py  app.py  cli.py  pages_datasets.py  pages_export.py  pages_home.py  pages_models.py  pages_quick.py  pages_train.py  pages_val.py  paths.py  utils.py
yoloradio/core/: __init__.py  dataset_manager.py  file_utils.py  model_manager.py  task_manager.py  task_types.py  train_manager.py  training_manager.py  validation_manager.py
yoloradio/ui/: __init__.py  pages_datasets.py  pages_export.py  pages_home.py  pages_logs.py  pages_models.py  pages_quick.py  pages_test.py  pages_train.py  pages_val.py
