[project]
name = "yoloradio"
version = "0.1.0"
description = "YOLO 可视化训练平台 - 基于 Gradio 和 Ultralytics 的 YOLO 模型管理与训练工具"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "AyalaKaguya", email = "papermo.io@gmail.com" }]
keywords = [
    "yolo",
    "machine-learning",
    "computer-vision",
    "gradio",
    "ultralytics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gradio>=5.44.1",
    "ultralytics>=8.3.197",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/AyalaKaguya/yoloradio"
Repository = "https://github.com/AyalaKaguya/yoloradio"
Issues = "https://github.com/AyalaKaguya/yoloradio/issues"

[project.scripts]
yoloradio = "yoloradio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=yoloradio",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
